--- a/assets/css/just-the-docs-dark.css
+++ b/assets/css/just-the-docs-dark.css
@@ -7870,4 +7870,20 @@ blockquote.warning-title > p:last-child {
   margin-bottom: 0;
 }
 
+.hidden {
+  display: none;
+}
+
+/* Remove that for solution 2: same container, smaller text size */
+@media (min-width: 50rem) {
+  .site-header {
+    min-height: 100px;
+  }
+}
+@media (min-width: 50rem) {
+  .site-nav {
+    padding-top: 1rem;
+  }
+}
+
 /*# sourceMappingURL=just-the-docs-dark.css.map */
